# boat-detection

./: .gitignore  CMakeLists.txt  README.md
include/: BoatDetector.h  functions.h  utilities-functions.h  utilities.h
src/: BoatDetector.cpp  application.cpp  functions.cpp  main.cpp  training.py  utilities-functions.cpp  utilities.cpp
src-python/: training.py  xml_to_txt.py
